Replace old footer links with newer links

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
@@ -48,8 +48,8 @@
                 <h3>Legal</h3>
                 <ul>
                     <li><a href="https://www.nationalarchives.gov.uk/legal/">Terms of use</a></li>
-                    <li><a href="https://www.nationalarchives.gov.uk/legal/privacy.htm">Privacy policy</a></li>
-                    <li><a href="https://www.nationalarchives.gov.uk/legal/cookies.htm">Cookies</a></li>
+                    <li><a href="https://www.nationalarchives.gov.uk/legal/privacy-policy/">Privacy policy</a></li>
+                    <li><a href="https://www.nationalarchives.gov.uk/legal/cookies/">Cookies</a></li>
                     <li><a href="https://www.nationalarchives.gov.uk/about/freedom-of-information/">Freedom of Information</a></li>
                     <li><a href="https://www.nationalarchives.gov.uk/about/our-role/transparency/">Transparency</a></li>
                     <li><a href="https://www.nationalarchives.gov.uk/legal/our-fees.htm">Our fees</a></li>
