added maxlength attribute for the other instance of the additionalrequirement.

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -160,7 +160,7 @@
                         }
                         else
                         {
-                            @Html.TextAreaFor(Model => Model.AdditionalRequirements, new { id = "additional-reqs" })
+                            @Html.TextAreaFor(Model => Model.AdditionalRequirements, new { id = "additional-reqs", @maxlength = "2000" })
                         }
                     </fieldset>
                     <button class="button" type="submit">Save and review</button>
