--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
@@ -37,7 +37,10 @@
             You need to add at least 20 documents before the deadline to avoid your order being cancelled.
         </p>
     }
-
+    <p class="helper-text">
+        Please note: we cannot guarantee that all the documents you have requested will be available on the day.
+        If there is a document that is of particular importance to your research, please add a note to the 'additional comments' box and we will contact you if it is unavailable.
+    </p>
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
             <label for="DocumentReference1">1</label>
