--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="notice">
-                    <strong class="title">BETA</strong>
-                    <p>This is a new service – your <a target="_blank" rel="noreferrer noopener" href="https://www.smartsurvey.co.uk/s/readingroomvisitbooking/">feedback</a> will help us to improve it.</a></p>
+                    <strong class="title">Please note</strong>
+                    <p>On Wednesday 13 March 2024 the Reading Rooms will open late, at 10am, due to staff training.</p>
                 </div>
             </div>
         </div>
