Revisions to new text on booking forms and confirmation email

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
@@ -38,8 +38,8 @@
         </p>
     }
     <p class="helper-text">
-        Please note: we cannot guarantee that all the documents you have requested will be available on the day.
-        If there is a document that is of particular importance to your research, please add a note to the 'additional comments' box and we will contact you if it is unavailable.
+        Please note. We cannot guarantee that all the documents you have requested will be available on the day of your visit.
+        If there is a document that is of particular importance to your research, please add a note to the 'additional comments' box and we will contact you the working day before your visit if it is unavailable.
     </p>
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
