--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
@@ -13,13 +13,13 @@
             You need to add at least 1 document before the deadline to avoid your order being cancelled. 
         </p>
     }
-    <p class="warning">
-        If you intend to request the same document for multiple days within the same week please only order for the first day of your visit.
-        You will be able to reserve the documents for a future date during your visit.
+    <p class="helper-text">
+        Do you require the same documents for multiple days within the same week? If so, please only order them for the first day of your visit.
+        You will be able to reserve the documents if you are returning within seven days of your visit.
     </p>
     <p class="helper-text">
-        Please note: we cannot guarantee that all the documents you have requested will be available on the day. 
-        If there is a document that is of particular importance to your research, please add a note to the 'additional comments' box and we will contact you if it is unavailable.
+        Please note. We cannot guarantee that all the documents you have requested will be available on the day of your visit. 
+        If there is a document that is of particular importance to your research, please add a note to the 'additional comments' box and we will contact you the working day before your visit if it is unavailable.
     </p>
 
     <div class="col-md-3 col-sm-12 col-xs-12">
