commented the banner

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
         <!-- End Google Tag Manager (noscript) -->
     }
     @await Html.PartialAsync("Partials/_CookieConsent")
-    @await Html.PartialAsync("Partials/_NotificationBanner")
+    @* @await Html.PartialAsync("Partials/_NotificationBanner") *@
     @await Html.PartialAsync("Partials/_Header")
 
     <main class="kbs pb-3" id="main-content">
