Updated the banner text

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
@@ -5,8 +5,7 @@
                 <div class="notice">
                     <strong class="title">Please note:</strong>
                     <p>
-                        from April 2024 to early 2025, we are replacing the repository windows in the older part of our building. 
-                        The work is likely to be noisy and may cause some noise disturbance in the reading rooms. We apologise for any disruption to your visit.  
+                        We are replacing the repository windows in the older part of our building until early 2025 and the work may be noisy. We apologise for any disruption to your visit.
                         <a target="_blank" href="https://www.nationalarchives.gov.uk/about/news/major-improvement-works-to-our-building/">Learn more.</a>
                     </p>
                 </div>
