Updated the style

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>@ViewData["Title"]</title>
 
-    <script>document.getElementsByTagName("html")[0].className = "js";</script>
+    <script>document.documentElement.classList.add("js");</script>
 
     <link rel='stylesheet'
           id='tna-parent-styles-css'
