re-arranged the notification banner

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
@@ -2,6 +2,7 @@
     Skip to main content
 </a>
 @await Html.PartialAsync("Partials/_CookieConsent")
+@await Html.PartialAsync("Partials/_NotificationBanner")
 <header class="tna-global-header" data-module="tna-global-header">
     <div class="tna-container tna-global-header__main">
         <div class="tna-column tna-column--flex-1 tna-column--order-2">
