Update the banner & email template

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
@@ -5,8 +5,14 @@
                 <div class="notice">
                     <strong class="title">Please note:</strong>
                     <p>
-                        We are replacing the repository windows in the older part of our building until early 2025 and the work may be noisy. We apologise for any disruption to your visit.
-                        <a target="_blank" href="https://www.nationalarchives.gov.uk/about/news/major-improvement-works-to-our-building/">Learn more.</a>
+                        We are replacing the windows in the older part of our building until Autumn 2025 and the work may be noisy. We apologise for any disruption to your visit.
+                        <a target="_blank" href="https://www.nationalarchives.gov.uk/about/news/improvement-work-to-our-building-continues/">Learn more.</a>
+                    </p>
+                </div>
+                <div class="notice">
+                    <strong class="warning">Planned maintenance:</strong>
+                    <p>
+                        On Sunday 11 May our ‘Book a reading room visit’ and ‘Reader registration’ online services will be unavailable. Sorry for any inconvenience caused.
                     </p>
                 </div>
             </div>
