Add C 40 to blocked Bulk Orders list

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
@@ -9,7 +9,7 @@
         We are unable to produce the following document series in bulk due to their
         size, condition or content:
 
-        <span id="unavailable-docs">BT 42, BT 43, BT 50, BT 52, BT 372, BT 382, C 13, C 14, E 112, KB 122, PROB 4, WO 416, WO 420 to WO 423, WO 428, WO 439, WO 440</span>
+        <span id="unavailable-docs">BT 42, BT 43, BT 50, BT 52, BT 372, BT 382, C 13, C 14, CP 40,E 112, KB 122, PROB 4, WO 416, WO 420 to WO 423, WO 428, WO 439, WO 440</span>
     </p>
 
     @if (ViewData.ModelState["Series"]?.Errors.Count() > 0)
