--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_CookieConsent.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_CookieConsent.cshtml
@@ -7,7 +7,7 @@
                 We'd like to use additional cookies to remember your settings and understand how you use our services. <br><br>
                 This information will help us make improvements to the website.
             </p>
-            <a href="https://www.nationalarchives.gov.uk/legal/cookies/" id="btn_preferences" class="button">Set cookie preferences</a>
+            <a href="https://www.nationalarchives.gov.uk/cookies/" id="btn_preferences" class="button">Set cookie preferences</a>
         </div>
     </div>
 </div>
